feat: use ts file

--- a/packages/ws-client/index.html
+++ b/packages/ws-client/index.html
@@ -119,6 +119,7 @@
       ws.onclose = () => {
         addText('[client] WebSocket connection closed')
         ws = null
+        uid = ''
       }
 
       ws.onerror = () => {
